# ima-evm-utils

./: README  configure.ac  ima-evm-utils.spec.in
packaging/: ima-evm-utils.spec
src/: evmctl.c  libimaevm.c
tests/: Makefile.am
